src/App.css
body {
  height: 100vh;
}

#root {
  display: flex;
  flex-direction: column;
  height: 100%;
}

/* Header */
header {
  font-size: 0.75rem;
  display: flex;
  gap: 0.25rem;
  justify-content: center;
  padding: 2rem 0;
  border-bottom: 1px solid #f4f4f4;
  position: sticky;
  top: 0;
  background-color: #fff;
}

header > div {
  background-color: #eee;
  border: 2px solid #eee;
  padding: 0.5rem 2rem;
  flex: 0 1 auto;
  text-align: center;
  min-width: 100px;
}

header > div:first-child {
  border-radius: 20px 0 0 20px;
}

header > div:last-child {
  border-radius: 0 20px 20px 0;
}

header > div:hover {
  cursor: not-allowed;
}

.header-current-step {
  background-color: white;
  border-color: #f7a15a;
  font-weight: bold;
}

main {
  display: grid;
  grid-template-columns: 1fr 1fr;
  height: 100%;
}

/* Steps */
.steps-data {
  padding: 2rem 5rem;
  border-right: 1px solid #f4f4f4;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.steps-data h1 {
  font-size: 2rem;
  font-weight: bold;
}

.steps-data .subtitle {
  color: #6b6b6b;
  font-weight: bold;
}

.form-wrapper {
  display: grid;
  grid-template-columns: 3fr 1fr;
  gap: 1rem;
  align-items: start;
  border-radius: 20px;
  transition: background-color 500ms ease;
  transition: padding 500ms ease;
}

.form-wrapper.hovered {
  background-color: #ffdddd;
  padding-left: 2rem;
}

form {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding: 2rem 0;
}

form .row {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 2rem;
}

form .field {
  display: grid;
  flex-direction: column;
}

form label {
  color: #b5b5b5;
  font-weight: bold;
  font-size: 0.75rem;
  padding-left: 1rem;
}

input,
textarea {
  border: 1px solid #b5b5b5;
  border-radius: 20px;
  padding: 0.5rem 1rem;
}

input:focus,
textarea:focus {
  outline: 1px solid #f7a15a;
  border-color: #f7a15a;
}

input:invalid,
textarea:invalid {
  outline: 1px solid #f75a5a;
  border-color: #f75a5a;
}

button {
  padding: 0.5rem 3rem;
  border-radius: 20px;
  font-weight: bold;
}

button:hover {
  cursor: pointer;
}

button:disabled {
  cursor: not-allowed;
}

.delete-button {
  margin: 2rem 0.5rem 0 0;
  margin-left: auto;
  color: #b5b5b5;
}

.delete-button:hover {
  cursor: pointer;
  color: #f75a5a;
}

.add-button {
  background-color: #eee;
  border: 1px solid #b5b5b5;
}

.back-button {
  background-color: #fff;
  border: 1px solid #b5b5b5;
}

.next-button {
  background-color: #f9a966;
  border: 1px solid #f7a15a;
}

.steps-data .buttons-wrapper {
  margin-top: auto;
  padding: 2rem 0;
  display: flex;
  justify-content: space-between;
}

/* Resume */
.resume {
  background-color: #ebebeb;
  font-size: 0.75rem;
}

.resume > .paper {
  margin: 2rem;
  padding: 1rem 3rem;
  background-color: #fff;
  text-align: start;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  position: sticky;
  top: 8.7rem;
}

.resume-row {
  display: flex;
  justify-content: center;
  gap: 0.25rem;
}

.section-row {
  display: flex;
  justify-content: space-between;
}

section.about {
  text-align: center;
}

.about > .full-name {
  font-size: 1.25rem;
  font-weight: bold;
}

.about > .job-title {
  font-size: 1rem;
}

.about > .bio {
  padding-top: 1rem;
}

section.work-experience,
section.projects,
section.educations {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.section-title {
  font-size: 1rem;
  font-weight: bold;
  text-align: start;
}

.bold {
  font-weight: bold;
}

.work-experience .company-and-location {
  display: flex;
  gap: 0.25rem;
  font-style: italic;
}

/* Tablet and mobile */
@media (max-width: 1200px) {
  main {
    grid-template-columns: 1fr;
  }
}

@media (max-width: 768px) {
  header {
    display: none;
  }
}

